--- a/arch/arm64/configs/lancelot_defconfig
+++ b/arch/arm64/configs/lancelot_defconfig
@@ -674,6 +674,13 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=58
+CONFIG_WAKE_BOOST_DURATION_MS=1000
+CONFIG_INPUT_BOOST_FREQ_LP=1050000
+CONFIG_INPUT_BOOST_FREQ_PERF=1295000
+CONFIG_MAX_BOOST_FREQ_LP=1800000
+CONFIG_MAX_BOOST_FREQ_PERF=2000000
 
 #
 # CPU frequency scaling drivers
