defconfig: Build KProfiles - Let's get this show on the road :)
Signed-off-by: Cyber Knight <cyberknight755@gmail.com>
Signed-off-by: Himemorii <himemori@mail.com>
Change-Id: Idd5cfc181c6928b2689d2e40f5147092b08531e1
Signed-off-by: ImLonely13 <gabutuhaku@gmail.com>

--- a/arch/arm64/configs/lancelot_defconfig
+++ b/arch/arm64/configs/lancelot_defconfig
@@ -1376,6 +1376,11 @@ CONFIG_UID_SYS_STATS=y
 #
 # VOP Driver
 #
+CONFIG_KPROFILES=y
+CONFIG_AUTO_KPROFILES=y
+# CONFIG_AUTO_KPROFILES_MSM_DRM is not set 
+# CONFIG_AUTO_KPROFILES_FB is not set
+# CONFIG_AUTO_KPROFILES_NONE is not set
 # CONFIG_ECHO is not set
 # CONFIG_CXL_BASE is not set
 # CONFIG_CXL_AFU_DRIVER_OPS is not set
