--- a/arch/arm64/configs/shiva_defconfig
+++ b/arch/arm64/configs/shiva_defconfig
@@ -681,6 +681,10 @@ CONFIG_INPUT_BOOST_FREQ_LP=1050000
 CONFIG_INPUT_BOOST_FREQ_PERF=1295000
 CONFIG_MAX_BOOST_FREQ_LP=1800000
 CONFIG_MAX_BOOST_FREQ_PERF=2000000
+CONFIG_CPU_FREQ_MIN_PERF=998000
+CONFIG_CPU_FREQ_MIN_LP=850000
+CONFIG_CPU_FREQ_IDLE_PERF=500000
+CONFIG_CPU_FREQ_IDLE_LP=500000
 
 #
 # CPU frequency scaling drivers
